// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/BatteryIcon Charged 0% 1`] = `
<BatteryIcon
  level={0}
>
  <span
    className=""
  >
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#e57373",
          }
        }
        width={0}
        x="4"
        y="3.83"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#ffffff",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Charged 10% 1`] = `
<BatteryIcon
  level={10}
>
  <span
    className=""
  >
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#e57373",
          }
        }
        width={4}
        x="4"
        y="3.83"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#ffffff",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Charged 20% 1`] = `
<BatteryIcon
  level={20}
>
  <span
    className=""
  >
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#ff9800",
          }
        }
        width={8}
        x="4"
        y="3.83"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#ffffff",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Charged 100% 1`] = `
<BatteryIcon
  level={100}
>
  <span
    className=""
  >
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#64dd17",
          }
        }
        width={41}
        x="4"
        y="3.83"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#ffffff",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Charging 0% 1`] = `
<BatteryIcon
  charging={true}
  level={0}
>
  <span
    className=""
  >
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#e57373",
          }
        }
        width={0}
        x="4"
        y="3.83"
      />
      <polygon
        fill="#ffffff"
        points="25.76 13.03 25.76 8.56 25.76 6.22 25.7 6.22 24.46 8.56 20.73 15.54 23.25 15.54 23.25 20.24 23.25 22.45 24.42 20.24 28.27 13.03 25.76 13.03"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#ffffff",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Charging 10% 1`] = `
<BatteryIcon
  charging={true}
  level={10}
>
  <span
    className=""
  >
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#e57373",
          }
        }
        width={4}
        x="4"
        y="3.83"
      />
      <polygon
        fill="#ffffff"
        points="25.76 13.03 25.76 8.56 25.76 6.22 25.7 6.22 24.46 8.56 20.73 15.54 23.25 15.54 23.25 20.24 23.25 22.45 24.42 20.24 28.27 13.03 25.76 13.03"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#ffffff",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Charging 20% 1`] = `
<BatteryIcon
  charging={true}
  level={20}
>
  <span
    className=""
  >
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#ff9800",
          }
        }
        width={8}
        x="4"
        y="3.83"
      />
      <polygon
        fill="#ffffff"
        points="25.76 13.03 25.76 8.56 25.76 6.22 25.7 6.22 24.46 8.56 20.73 15.54 23.25 15.54 23.25 20.24 23.25 22.45 24.42 20.24 28.27 13.03 25.76 13.03"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#ffffff",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Charging 100% 1`] = `
<BatteryIcon
  charging={true}
  level={100}
>
  <span
    className=""
  >
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#64dd17",
          }
        }
        width={41}
        x="4"
        y="3.83"
      />
      <polygon
        fill="#ffffff"
        points="25.76 13.03 25.76 8.56 25.76 6.22 25.7 6.22 24.46 8.56 20.73 15.54 23.25 15.54 23.25 20.24 23.25 22.45 24.42 20.24 28.27 13.03 25.76 13.03"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#ffffff",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Counter 0% 1`] = `
<BatteryIcon
  counter={true}
  level={0}
>
  <span
    className=""
  >
    <span
      style={
        Object {
          "marginRight": 10,
        }
      }
    >
      <Typography
        color="#ffffff"
        semiBold={true}
        variant="subtext"
      >
        <WithStyles(TypographyComp)
          color="#ffffff"
          innerRef={null}
          jssContext={
            Object {
              "classNamePrefix": "",
              "disableStylesGeneration": false,
            }
          }
          semiBold={true}
          theme={Object {}}
          variant="subtext"
        >
          <TypographyComp
            classes={
              Object {
                "big": "TypographyComp-big-0-3-7",
                "bold": "TypographyComp-bold-0-3-1",
                "capitalize": "TypographyComp-capitalize-0-3-12",
                "distance": "TypographyComp-distance-0-3-6",
                "ellipsis": "TypographyComp-ellipsis-0-3-14",
                "giant": "TypographyComp-giant-0-3-9",
                "heading": "TypographyComp-heading-0-3-8",
                "italic": "TypographyComp-italic-0-3-3",
                "lowercase": "TypographyComp-lowercase-0-3-11",
                "noWrap": "TypographyComp-noWrap-0-3-13",
                "semiBold": "TypographyComp-semiBold-0-3-2",
                "standard": "TypographyComp-standard-0-3-5",
                "subtext": "TypographyComp-subtext-0-3-4",
                "uppercase": "TypographyComp-uppercase-0-3-10",
              }
            }
            color="#ffffff"
            semiBold={true}
            variant="subtext"
          >
            <span
              className="TypographyComp-subtext-0-3-4 TypographyComp-semiBold-0-3-2"
              style={
                Object {
                  "color": "rgba(255, 255, 255, 1)",
                }
              }
            >
              0
               %
            </span>
          </TypographyComp>
        </WithStyles(TypographyComp)>
      </Typography>
    </span>
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#e57373",
          }
        }
        width={0}
        x="4"
        y="3.83"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#ffffff",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Counter 20% 1`] = `
<BatteryIcon
  counter={true}
  level={20}
>
  <span
    className=""
  >
    <span
      style={
        Object {
          "marginRight": 10,
        }
      }
    >
      <Typography
        color="#ffffff"
        semiBold={true}
        variant="subtext"
      >
        <WithStyles(TypographyComp)
          color="#ffffff"
          innerRef={null}
          jssContext={
            Object {
              "classNamePrefix": "",
              "disableStylesGeneration": false,
            }
          }
          semiBold={true}
          theme={Object {}}
          variant="subtext"
        >
          <TypographyComp
            classes={
              Object {
                "big": "TypographyComp-big-0-3-7",
                "bold": "TypographyComp-bold-0-3-1",
                "capitalize": "TypographyComp-capitalize-0-3-12",
                "distance": "TypographyComp-distance-0-3-6",
                "ellipsis": "TypographyComp-ellipsis-0-3-14",
                "giant": "TypographyComp-giant-0-3-9",
                "heading": "TypographyComp-heading-0-3-8",
                "italic": "TypographyComp-italic-0-3-3",
                "lowercase": "TypographyComp-lowercase-0-3-11",
                "noWrap": "TypographyComp-noWrap-0-3-13",
                "semiBold": "TypographyComp-semiBold-0-3-2",
                "standard": "TypographyComp-standard-0-3-5",
                "subtext": "TypographyComp-subtext-0-3-4",
                "uppercase": "TypographyComp-uppercase-0-3-10",
              }
            }
            color="#ffffff"
            semiBold={true}
            variant="subtext"
          >
            <span
              className="TypographyComp-subtext-0-3-4 TypographyComp-semiBold-0-3-2"
              style={
                Object {
                  "color": "rgba(255, 255, 255, 1)",
                }
              }
            >
              20
               %
            </span>
          </TypographyComp>
        </WithStyles(TypographyComp)>
      </Typography>
    </span>
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#ff9800",
          }
        }
        width={8}
        x="4"
        y="3.83"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#ffffff",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Counter 34% 1`] = `
<BatteryIcon
  counter={true}
  level={33.99999999}
>
  <span
    className=""
  >
    <span
      style={
        Object {
          "marginRight": 10,
        }
      }
    >
      <Typography
        color="#ffffff"
        semiBold={true}
        variant="subtext"
      >
        <WithStyles(TypographyComp)
          color="#ffffff"
          innerRef={null}
          jssContext={
            Object {
              "classNamePrefix": "",
              "disableStylesGeneration": false,
            }
          }
          semiBold={true}
          theme={Object {}}
          variant="subtext"
        >
          <TypographyComp
            classes={
              Object {
                "big": "TypographyComp-big-0-3-7",
                "bold": "TypographyComp-bold-0-3-1",
                "capitalize": "TypographyComp-capitalize-0-3-12",
                "distance": "TypographyComp-distance-0-3-6",
                "ellipsis": "TypographyComp-ellipsis-0-3-14",
                "giant": "TypographyComp-giant-0-3-9",
                "heading": "TypographyComp-heading-0-3-8",
                "italic": "TypographyComp-italic-0-3-3",
                "lowercase": "TypographyComp-lowercase-0-3-11",
                "noWrap": "TypographyComp-noWrap-0-3-13",
                "semiBold": "TypographyComp-semiBold-0-3-2",
                "standard": "TypographyComp-standard-0-3-5",
                "subtext": "TypographyComp-subtext-0-3-4",
                "uppercase": "TypographyComp-uppercase-0-3-10",
              }
            }
            color="#ffffff"
            semiBold={true}
            variant="subtext"
          >
            <span
              className="TypographyComp-subtext-0-3-4 TypographyComp-semiBold-0-3-2"
              style={
                Object {
                  "color": "rgba(255, 255, 255, 1)",
                }
              }
            >
              34
               %
            </span>
          </TypographyComp>
        </WithStyles(TypographyComp)>
      </Typography>
    </span>
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#64dd17",
          }
        }
        width={14}
        x="4"
        y="3.83"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#ffffff",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Counter 100% 1`] = `
<BatteryIcon
  counter={true}
  level={100}
>
  <span
    className=""
  >
    <span
      style={
        Object {
          "marginRight": 10,
        }
      }
    >
      <Typography
        color="#ffffff"
        semiBold={true}
        variant="subtext"
      >
        <WithStyles(TypographyComp)
          color="#ffffff"
          innerRef={null}
          jssContext={
            Object {
              "classNamePrefix": "",
              "disableStylesGeneration": false,
            }
          }
          semiBold={true}
          theme={Object {}}
          variant="subtext"
        >
          <TypographyComp
            classes={
              Object {
                "big": "TypographyComp-big-0-3-7",
                "bold": "TypographyComp-bold-0-3-1",
                "capitalize": "TypographyComp-capitalize-0-3-12",
                "distance": "TypographyComp-distance-0-3-6",
                "ellipsis": "TypographyComp-ellipsis-0-3-14",
                "giant": "TypographyComp-giant-0-3-9",
                "heading": "TypographyComp-heading-0-3-8",
                "italic": "TypographyComp-italic-0-3-3",
                "lowercase": "TypographyComp-lowercase-0-3-11",
                "noWrap": "TypographyComp-noWrap-0-3-13",
                "semiBold": "TypographyComp-semiBold-0-3-2",
                "standard": "TypographyComp-standard-0-3-5",
                "subtext": "TypographyComp-subtext-0-3-4",
                "uppercase": "TypographyComp-uppercase-0-3-10",
              }
            }
            color="#ffffff"
            semiBold={true}
            variant="subtext"
          >
            <span
              className="TypographyComp-subtext-0-3-4 TypographyComp-semiBold-0-3-2"
              style={
                Object {
                  "color": "rgba(255, 255, 255, 1)",
                }
              }
            >
              100
               %
            </span>
          </TypographyComp>
        </WithStyles(TypographyComp)>
      </Typography>
    </span>
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#64dd17",
          }
        }
        width={41}
        x="4"
        y="3.83"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#ffffff",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Dark 10% 1`] = `
<BatteryIcon
  level={10}
  variant="dark"
>
  <span
    className=""
  >
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#e57373",
          }
        }
        width={4}
        x="4"
        y="3.83"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#000000",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Dark 20% 1`] = `
<BatteryIcon
  level={20}
  variant="dark"
>
  <span
    className=""
  >
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#ff9800",
          }
        }
        width={8}
        x="4"
        y="3.83"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#000000",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Dark 100% 1`] = `
<BatteryIcon
  level={100}
  variant="dark"
>
  <span
    className=""
  >
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#64dd17",
          }
        }
        width={41}
        x="4"
        y="3.83"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#000000",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Dark charging 0% 1`] = `
<BatteryIcon
  charging={true}
  level={0}
  variant="dark"
>
  <span
    className=""
  >
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#e57373",
          }
        }
        width={0}
        x="4"
        y="3.83"
      />
      <polygon
        fill="#000000"
        points="25.76 13.03 25.76 8.56 25.76 6.22 25.7 6.22 24.46 8.56 20.73 15.54 23.25 15.54 23.25 20.24 23.25 22.45 24.42 20.24 28.27 13.03 25.76 13.03"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#000000",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Dark charging 10% 1`] = `
<BatteryIcon
  charging={true}
  level={10}
  variant="dark"
>
  <span
    className=""
  >
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#e57373",
          }
        }
        width={4}
        x="4"
        y="3.83"
      />
      <polygon
        fill="#000000"
        points="25.76 13.03 25.76 8.56 25.76 6.22 25.7 6.22 24.46 8.56 20.73 15.54 23.25 15.54 23.25 20.24 23.25 22.45 24.42 20.24 28.27 13.03 25.76 13.03"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#000000",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;

exports[`Storyshots Components/BatteryIcon Dark charging 20% 1`] = `
<BatteryIcon
  charging={true}
  level={20}
  variant="dark"
>
  <span
    className=""
  >
    <svg
      height="28"
      viewBox="0 0 56 28"
      width="56"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="20.5"
        style={
          Object {
            "fill": "#ff9800",
          }
        }
        width={8}
        x="4"
        y="3.83"
      />
      <polygon
        fill="#000000"
        points="25.76 13.03 25.76 8.56 25.76 6.22 25.7 6.22 24.46 8.56 20.73 15.54 23.25 15.54 23.25 20.24 23.25 22.45 24.42 20.24 28.27 13.03 25.76 13.03"
      />
      <path
        d="M49,28V19.5h7V8.5H49V0H0V28ZM4,4H45V24H4Z"
        style={
          Object {
            "fill": "#000000",
          }
        }
      />
    </svg>
  </span>
</BatteryIcon>
`;
